Bug 461263 - Race condition exists with mozStorageTransaction While the race was technically "safe", we could have possibly wrongly tried to commit or rollback.  This changeset makes us operate sanely in all conditions. r=bent